--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -1,4 +1,21 @@
 #CarouselWrapper{
+    width: 100% ;
+    height: 100% ;
+ 
+    background-color: #a5e5;
+    /* Add this */
+    position:fixed;
+    top:0;
+    left:0;
+}
 
-    margin-top: 40%;
+img .CarouselWrapper {
+
+    height:100%;
+    width:100%
+}
+
+#TheSlider {
+
+    width: 100%;
 }
