responsive style few changes

--- a/src/components/Location.css
+++ b/src/components/Location.css
@@ -34,7 +34,7 @@
    
 }
 
-@media screen and (max-width: 720px){
+@media screen and (max-width: 580px){
 
     .LocationWrapper{
         display:grid;
@@ -51,5 +51,21 @@
         color: #d9d9d9;
         
        
+    }
+
+    #gmap_canvas {
+        overflow:hidden;
+        background:none!important;
+        height:500px;
+        width:100%;
+       
+    }
+
+    .mapouter{
+        position:relative;
+        height:auto;
+        width:100%;
+        padding-bottom: 15px;
+        overflow: hidden;
     }
 }
