--- a/src/components/WhatsappFloat.css
+++ b/src/components/WhatsappFloat.css
@@ -31,3 +31,37 @@
 .my-float{
 	margin-top:16px;
 }
+
+@media screen and (max-width: 400px){
+
+	.float{
+		position:fixed;
+		width:200px;
+		height:60px;
+		up:40px;
+		right:40px;
+		background-color:#000000;
+		color:#FFF;
+		border-radius:50px;
+		text-align:center;
+		font-size:25px;
+		box-shadow: 2px 2px 3px #999;
+		z-index:100;
+	}
+	.float:hover{
+		position:fixed;
+		width:200px;
+		height:60px;
+		bottom:40px;
+		right:40px;
+		background-color:#feffff;
+		color:rgb(0, 0, 0);
+		border-radius:50px;
+		text-align:center;
+		font-size:25px;
+		box-shadow: 2px 2px 3px #999;
+		z-index:100;
+	}
+	
+	
+}
