Contact form added ,new general style ,Cards layout fixed

--- a/src/components/WhatsappFloat.css
+++ b/src/components/WhatsappFloat.css
@@ -4,7 +4,7 @@
 	height:60px;
 	bottom:40px;
 	right:40px;
-	background-color:#000000;
+	background-color:#1f1e1e;
 	color:#FFF;
 	border-radius:50px;
 	text-align:center;
@@ -18,7 +18,7 @@
 	height:60px;
 	bottom:40px;
 	right:40px;
-	background-color:#feffff;
+	background-color:#8b9191;
 	color:rgb(0, 0, 0);
 	border-radius:50px;
 	text-align:center;
@@ -38,7 +38,7 @@
 		position:fixed;
 		width:200px;
 		height:60px;
-		up:40px;
+		top:40px;
 		right:40px;
 		background-color:#000000;
 		color:#FFF;
