--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -1,9 +1,10 @@
 .Cards {
     font-family: 'Oxygen', sans-serif;
     background: #d9d9d9;
-    box-sizing:border-box;
+    box-sizing:content-box;
     align-self: center;
-    margin: auto;
-    width: 60%;
+    margin: 0;
+    width: 100%;
+    background-color: #a6b361;
   
   }
