--- a/src/components/Location.css
+++ b/src/components/Location.css
@@ -1,17 +1,18 @@
 .LocationWrapper{
-    display: flex;
+    display: grid ;
+    grid-template-rows: auto;
     box-sizing:content-box ;
     align-content: center;
-    margin: auto;
+    margin: 0;
     background-color:#353535;
     
 }
 .Info{
-    width: 50%;
-    text-align: left;
+    width: 100%;
+    text-align: center;
     box-sizing:content-box ;
     align-content: center;
-    padding-top: 10%;
+    padding-bottom: 10%;
     padding-left: 2%;
     font-size: 22px;
     color: #d9d9d9;
@@ -21,7 +22,7 @@
 .mapouter{
     position:relative;
     height:auto;
-    width:70%;
+    width:100%;
     padding-bottom: 15px;
     overflow: hidden;
 }
@@ -30,11 +31,11 @@
     overflow:hidden;
     background:none!important;
     height:500px;
-    width:90%;
+    width:100%;
    
 }
 
-@media screen and (max-width: 580px){
+@media screen and (max-width: 600px){
 
     .LocationWrapper{
         display:grid;
@@ -42,7 +43,7 @@
     }
 
     .Info{
-        margin: auto;
+        margin: 0;
         width: 50%;
         text-align: center;
         box-sizing:content-box ;
