--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -2,11 +2,12 @@
     width: 100% ;
     height: 100% ;
  
-    background-color: #a5e5;
+    background-color: #a6b361;
     /* Add this */
     position:fixed;
     top:0;
     left:0;
+    margin: 0;
 }
 
 img .CarouselWrapper {
