--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -1,14 +1,14 @@
-#CarouselWrapper{
+.CarouselWrapper{
     width: 100% ;
-    height: 100% ;
- 
+
     background-color: #a6b361;
     /* Add this */
-    position:fixed;
     top:0;
     left:0;
     margin: 0;
+    padding: auto;
 }
+
 
 img .CarouselWrapper {
 
