--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -1,10 +1,10 @@
 .Cards {
     font-family: 'Oxygen', sans-serif;
-    background: #d9d9d9;
+    background: #D9E5D6;
     box-sizing:content-box;
     align-self: center;
     margin: 0;
     width: 100%;
-    background-color: #a6b361;
+    background-color: #0FA3B1;
   
   }
