--- a/src/components/InfoSection.css
+++ b/src/components/InfoSection.css
@@ -1,6 +1,6 @@
 .slider_section {
     min-height: 560px;
-    background: #424346;
+    background: #595F72;
     position: relative;
 }
 .slider_section::after {
@@ -9,7 +9,7 @@
    top: 0;
    right: -370px;
    content: "";
-   background: rgb(255, 255, 255);
+   background: #0FA3B1;
    display: block;
    height: 100%;
    transform: skew(50deg);
@@ -20,7 +20,7 @@
    bottom: 0;
    right: 0px;
    content: "";
-   background: rgb(255, 255, 255);
+   background: transparent;
    display: block;
    height: 20px;
 }
@@ -30,7 +30,7 @@
     color: aliceblue;
 }
 .slide_img {
-   margin-top: 40px;
+   margin-top: 20%;
    margin-bottom: 0;
 }
 .top-banner-slider .heroslider {
@@ -51,18 +51,6 @@
     height: 100%;
     left: 0px;
     top: 0px;
-}
-
-.full {
-    float: left;
-    width: 100%;
-}
-
-.full {
-    width: 100%;
-    float: left;
-    margin: 0;
-    padding: 0;
 }
 
 .slider_section .full {
