--- a/src/components/TheNavbar.css
+++ b/src/components/TheNavbar.css
@@ -1,6 +1,11 @@
 .TheNavbar {
-    background-color: #353535;
+    background-color: #595F72;
     opacity: 0.98;
     height: 15%;
-    color: #d9d9d9 ;
+    width: 100%;
+    color: #fff ;
+    position: fixed;
+    z-index: 100;
+    opacity: 0.8;
+
 }
