--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -1,7 +1,7 @@
 .CarouselWrapper{
     width: 100% ;
 
-    background-color: #a6b361;
+    background-color: #595F72;
     /* Add this */
     top:0;
     left:0;
