--- a/src/components/InfoSection.css
+++ b/src/components/InfoSection.css
@@ -13,6 +13,7 @@
    display: block;
    height: 100%;
    transform: skew(50deg);
+   max-width: 100%; 
 }
 .slider_section::before {
    width: 100%;
@@ -23,49 +24,22 @@
    background: transparent;
    display: block;
    height: 20px;
+   max-width: 100%; 
 }
 .slider_section .full {
     position: relative;
     z-index: 9;
     color: aliceblue;
+    max-width: 100%; 
 }
 .slide_img {
    margin-top: 20%;
    margin-bottom: 0;
 }
-.top-banner-slider .heroslider {
-    margin: 0px;
-    padding: 0px;
-    border: none;
-    position: relative;
-    border-radius: 0;
-}
-.swiper-overlay {
-    height: 100%;
-    position: relative;
-}
-.swiper-overlay {
-    background: rgba(0, 0, 0, 0.5);
-    content: "";
-    width: 100%;
-    height: 100%;
-    left: 0px;
-    top: 0px;
-}
 
-.slider_section .full {
-    position: relative;
-    z-index: 9;
-}
-
-
-.cur {
-    color: #ffffff;
-}
-
-.slider_section h1 strong.cur {
-    font-size: 50px;
-    line-height: 50px;
-    color: #ffffff;
-    font-weight: 400;
-}
+.scaled-image {
+    width: 480px; /* Ancho fijo deseado */
+    height: auto; /* Altura automática para mantener la proporción */
+    max-width: 100%; /* Evita que la imagen se desborde del contenedor */
+  }
+  
